--- a/CICD.Tools.JenkinsMaintenance/Properties/launchSettings.json
+++ b/CICD.Tools.JenkinsMaintenance/Properties/launchSettings.json
@@ -2,12 +2,12 @@
   "profiles": {
     "CICD.Tools.JenkinsMaintenance": {
         "commandName": "Project",
-        "commandLineArgs": "info -if C:\\Users\\MichielOD\\Downloads\\info.json"
-        //"commandLineArgs": "prepare -mf C:\\Users\\MichielOD\\Downloads\\maintenance-info.json"
-        //"commandLineArgs": "resume -mf C:\\Users\\MichielOD\\Downloads\\maintenance-info.json --safe"
-        //"commandLineArgs": "resurrect -mf C:\\Users\\MichielOD\\Downloads\\kill-info.json --safe"
+        "commandLineArgs": "info -if %USERPROFILE%\\Documents\\JenkinsMaintenance\\info.json"
+        //"commandLineArgs": "prepare -mf %USERPROFILE%\\Documents\\JenkinsMaintenance\\maintenance-info.json"
+        //"commandLineArgs": "resume -mf %USERPROFILE%\\Documents\\JenkinsMaintenance\\maintenance-info.json --safe"
+        //"commandLineArgs": "resurrect -mf %USERPROFILE%\\Documents\\JenkinsMaintenance\\kill-info.json --safe"
         //"commandLineArgs": "greater-resurrect --safe"
-        //"commandLineArgs": "kill -mf C:\\Users\\MichielOD\\Downloads\\kill-info.json --safe"
+        //"commandLineArgs": "kill -mf %USERPROFILE%\\Documents\\JenkinsMaintenance\\kill-info.json --safe"
     }
   }
 }
